--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "@typescript-eslint/recommended"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "no-unused-vars": "warn",
     "prefer-const": "error",
     "no-var": "error",
     "react/no-unescaped-entities": "off"
