--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
   "extends": ["next/core-web-vitals"],
   "rules": {
-    "no-unused-vars": "warn",
-    "prefer-const": "error",
-    "no-var": "error",
+    "no-unused-vars": "off",
+    "prefer-const": "warn",
+    "no-var": "warn",
     "react/no-unescaped-entities": "off"
   }
 }
